--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=docker-laravel-db.cj8pmrix3zeb.ap-northeast-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=laravel_local
-DB_USERNAME=phper
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=myrdspassword
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
